--- a/pages/fundamentals/p2p.mdx
+++ b/pages/fundamentals/p2p.mdx
@@ -3,7 +3,7 @@ import { Callout } from "nextra-theme-docs";
 # 🚧 Peer-to-Peer
 
 <Callout type="warning" emoji="⚠️">
-  P2p is not supported yet on Deoxys full nodes. Please refer to the
+  P2p is not supported yet on Madara full nodes. Please refer to the
   [Version](/) section for official releases.
 </Callout>
 
