--- a/pages/fundamentals/synchronization.mdx
+++ b/pages/fundamentals/synchronization.mdx
@@ -17,7 +17,7 @@ import { Callout } from "nextra-theme-docs";
   - Sync from the genesis of the desired network
   - The slowest way to sync the desired network
   - Heavy storage usage
-  - Not available on Deoxys nodes yet
+  - Not available on Madara nodes yet
 
 | Sync Mode | Disk Space needed | Full current state | Full current and all receipts | Time to sync | Time to RPC |
 | --------- | ----------------- | ------------------ | ----------------------------- | ------------ | ----------- |
@@ -33,7 +33,7 @@ import { Callout } from "nextra-theme-docs";
 
 ## Addtional modes
 
-They're some additional modes you may want to use when syncing a Deoxys instance, for exemple for dev purposes
+They're some additional modes you may want to use when syncing a Madara instance, for exemple for dev purposes
 
 - Disable state root
   - Available using the **`--disable-root`** command
