--- a/pages/interacting/methods.mdx
+++ b/pages/interacting/methods.mdx
@@ -12,7 +12,7 @@ import { Tabs, Tab } from "nextra/components";
 # Starknet JSON-RPC methods
 
 <Callout type="info" emoji="ℹ️">
-  **Info**: Deoxys is currently supporting the latest version of Starknet
+  **Info**: Madara is currently supporting the latest version of Starknet
   mainnet official [JSON-RPC
   specs](https://github.com/starkware-libs/starknet-specs). For more
   informations regarding the current and upcoming releases please reffer to the
